# gpu-camera-sample

./: .gitignore  CMakeLists.txt  LI-IMX477-MIPI.md  LICENSE  README.md  fastvideo.md
Img/: Calendar.BGGR.pgm
Scripts/: build_ffmpeg.sh  make_links.sh
src/: AppSettings.cpp  AsyncFileWriter.cpp  AsyncFileWriter.h  FFCReader.cpp  FPNReader.cpp  FPNReader.h  GPUCameraSample.pro  MJPEGEncoder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RawProcessor.cpp  RawProcessor.h  Resorces.qrc  common.pri  common_defs.pri  common_funcs.pri  common_unix.pri  helper_jpeg_load.cpp  helper_jpeg_store.cpp  main.cpp  ppm.cpp  ppm.h  quadVertex.vert  version.h
src/CUDASupport/: CUDAProcessorBase.cpp  CUDAProcessorBase.h  CUDAProcessorGray.cpp  CUDAProcessorGray.h  CUDAProcessorOptions.h
src/Camera/: CameraBase.h  FrameBuffer.cpp  FrameBuffer.h  GeniCamCamera.cpp  GeniCamCamera.h  PGMCamera.cpp  PGMCamera.h  XimeaCamera.cpp  XimeaCamera.h
src/CameraSample/: AppSettings.cpp  AppSettings.h  AsyncQueue.h  CMakeLists.txt  CameraSample.pro  FFCReader.cpp  FFCReader.h  FPNReader.cpp  FPNReader.h  GPUCameraSample.sh  Globals.cpp  Globals.h  MJPEGEncoder.cpp  MJPEGEncoder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RawProcessor.cpp  RawProcessor.h  gpu-camera-sample.rc  helper_jpeg.hpp  helper_jpeg_load.cpp  helper_jpeg_store.cpp  init_unix_libs.sh  main.cpp  quadFragment.frag  resource.h  resource.rc
src/CameraSample/CUDASupport/: CUDAProcessorBase.cpp  CUDAProcessorBase.h  CUDAProcessorGray.cpp  CUDAProcessorGray.h  CUDAProcessorOptions.h  CudaAllocator.h  GPUImage.h
src/CameraSample/Camera/: BaslerCamera.cpp  BaslerCamera.h  CameraBase.cpp  CameraBase.h  FLIRCamera.cpp  FLIRCamera.h  FrameBuffer.cpp  FrameBuffer.h  GPUCameraBase.cpp  GPUCameraBase.h  GeniCamCamera.cpp  GeniCamCamera.h  ImperxCamera.cpp  ImperxCamera.h  LucidCamera.cpp  LucidCamera.h  MIPICamera.cpp  MIPICamera.h  PGMCamera.cpp  PGMCamera.h  XimeaCamera.cpp  XimeaCamera.h
src/CameraSample/RtspServer/: CTPTransport.cpp  CTPTransport.h  JpegEncoder.cpp  JpegEncoder.h  RTSPStreamerServer.cpp  RTSPStreamerServer.h  TcpClient.cpp  TcpClient.h  common_utils.h  vutils.cpp  vutils.h
src/CameraSample/Widgets/: CameraSetupWidget.cpp  CameraSetupWidget.h  CameraSetupWidget.ui  DenoiseController.cpp  DenoiseController.h  DenoiseController.ui  GLImageViewer.cpp  GLImageViewer.h  GtGWidget.cpp  GtGWidget.h  camerastatistics.cpp  camerastatistics.h  camerastatistics.ui
src/CameraSample/avfilewriter/: avfilewriter.cpp  avfilewriter.h
src/CameraSample/jetson_api/: NvBufSurface.h  common_types.h  jetson_api.pri  nvbuf_utils.h  nvvideoencoder.cpp  nvvideoencoder.h  v4l2_nv_extensions.h  v4l2encoder.cpp  v4l2encoder.h
src/CameraSample/rc_genicam_api/: buffer.cc  buffer.h  config.cc  config.h  cport.cc  device.h  exception.cc  gentl_wrapper.h  gentl_wrapper_linux.cc  gentl_wrapper_win32.cc  image.cc  image.h  imagelist.cc  interface.h  pixel_formats.h  pointcloud.cc  pointcloud.h  stream.cc
src/RtspPlayer/: CMakeLists.txt  CTPTransport.cpp  CTPTransport.h  DialogOpenServer.cpp  DialogOpenServer.h  DialogOpenServer.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RTSPServer.cpp  RTSPServer.h  RtspPlayer.pro  RtspPlayer.sh  SDIConverter.cpp  SDIConverter.h  common.cpp  common.h  common_utils.h  fastvideo_decoder.cpp  fastvideo_decoder.h  jpegenc.cpp  jpegenc.h  main.cpp  ppm.cpp  ppm.h  resorces.qrc  vdecoder.cpp  vdecoder.h
src/RtspPlayer/Widgets/: GLImageViewer.cpp  GLImageViewer.h  GLWidget.cpp  GLWidget.h  GLWidget.ui  GtGWidget.cpp  GtGWidget.h
src/RtspPlayer/cuviddecoder/: cuviddecoder.cpp  cuviddecoder.h  cuviddecoder.pri
src/RtspPlayer/res/: quadFragment.frag  quadVertex.vert
src/Widgets/: DenoiseController.cpp  DenoiseController.h  GLImageViewer.cpp  GLImageViewer.h  GtGWidget.cpp
src/rc_genicam_api/: config.cc  cport.h  device.cc  exception.h  gentl_wrapper_linux.cc  gentl_wrapper_win32.cc  imagelist.h  interface.cc  stream.cc  stream.h  system.cc  system.h
